# bininspect

./: agents.md  bininspect-output.json  deno.json  dev.ts  plan.md
.github/workflows/: wasm-ci-release.yml
.zed/: settings.json
crates/bininspect/: Cargo.toml
crates/bininspect-core/: Cargo.toml
crates/bininspect-core/src/: lib.rs  main.rs  model.rs  util.rs
crates/bininspect-core/src/analysis/: mod.rs  risk.rs
crates/bininspect-core/src/parsers/: elf.rs  mod.rs  pe.rs
crates/bininspect-wasm/: Cargo.toml
crates/bininspect-wasm/src/: lib.rs
crates/bininspect/src/: detect.rs  lib.rs
crates/bininspect/src/analysis/: entropy.rs  strings.rs
crates/bininspect/src/parsers/: macho.rs  mod.rs  unknown.rs  wasm.rs
lib/: bininspect_wasm.d.ts  bininspect_wasm.internal.js  bininspect_wasm.js  bininspect_wasm.wasm
