[package]
name = "bininspect-wasm"
version = "0.1.1"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bininspect-core = { path = "../bininspect-core", features = ["ts-types"] }
js-sys = "0.3"
wasm-bindgen = "=0.2.106"

[lints.clippy]
all = "warn"
unwrap_used = "deny"
