[package]
name = "bininspect"
version = "0.1.0"
edition = "2024"

[features]
default = []
ts-types = ["dep:tsify", "dep:wasm-bindgen"]

[lib]
name = "bininspect"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
tsify = { version = "0.5.6", default-features = false, features = ["js"], optional = true }
wasm-bindgen = { version = "=0.2.106", optional = true }

[lints.clippy]
all = "warn"
unwrap_used = "deny"
